# school-schedule-website

./: .gitignore  README.md  config.py  fix_database.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  auth.py  forms.py  models.py  routes.py
migrations/versions/: 0d5d99b88467_add_created_at_updated_at_to_user.py  16a5521e5a15_fix_foreign_keys.py  4d6c6f67293c_fix_foreign_keys.py  8710a1b951e7_initial_migration.py
static/css/: schedule-editor.css  schedule-view.css  style.css
static/js/: dashboard.js  schedule-editor.js  schedule-view.js  script.js
templates/: 403.html  404.html  500.html  base.html  create_schedule.html  dashboard.html  edit_schedule.html  index.html  login.html  profile.html  register.html  view_schedule.html
